# solana-vscode

./: .gitignore  .vscodeignore  CHANGELOG.md  CLAUDE.md  README.md  TESTING_DYLINT.md  beta-tester-guide.md  build_all_lints.sh  package-lock.json  package.json  test_dylint.rs  tsconfig.json
extension/detectors/immutable_account_mutated/: Cargo.toml  README.md
extension/detectors/immutable_account_mutated/src/: lib.rs
extension/detectors/immutable_account_mutated/ui/: main.rs
isolated_dylint_test/: Cargo.toml
isolated_dylint_test/examples/: run_dylint_programmatic.rs
isolated_dylint_test/simple_counter/: Anchor.toml
isolated_dylint_test/simple_counter/programs/simple_counter/: Cargo.toml
isolated_dylint_test/simple_counter/programs/simple_counter/src/: lib.rs  state.rs  (+1 more)
isolated_dylint_test/simple_counter/tests/: Cargo.toml
isolated_dylint_test/simple_counter/tests/src/: test_initialize.rs
isolated_dylint_test/src/: lib.rs
isolated_dylint_test/test_project/src/: main.rs
isolated_dylint_test/ui/: main.rs  main.stderr
language-server/: Cargo.toml  README.md  build-language-server.sh  build-release-binaries.sh  build-release-binaries.zsh  debug-run.zsh  rust-toolchain.toml  temp  temp_safe  temp_safe_boundary  temp_safe_float  temp_safe_paren  temp_safe_paren.rs  temp_safe_trivial
language-server/docs/: HYBRID_DETECTORS.md
language-server/examples/: hybrid_detector_demo.rs
language-server/src/: backend.rs  lib.rs  main.rs  server.rs
language-server/src/core/: backend_stats.rs  mod.rs  notifications.rs
language-server/src/core/detectors/: clippy_analyzer.rs  detector.rs  detector_config.rs  immutable_account_mutated_detector.rs  instruction_attribute_invalid.rs  instruction_attribute_unused.rs  manual_lamports_zeroing.rs  missing_check_comment.rs  missing_initspace_detector.rs  missing_signer.rs  mod.rs  sysvar_account_detector.rs  unsafe_math.rs
language-server/src/core/dylint/: cache.rs  compiler.rs  constants.rs  loader.rs  manager.rs  mod.rs  scanner.rs
language-server/src/core/file_scanner/: mod.rs  scanner.rs  types.rs
language-server/src/core/registry/: detector_registry.rs  mod.rs  registry.rs
language-server/src/core/utilities/: anchor_patterns.rs  ast_analyzer.rs  diagnostic_builder.rs  mod.rs
language-server/src/dylint_runner/: README.md  diagnostics.rs  mod.rs  parser.rs  runner.rs
language-server/tests/: backend_test.rs  clippy_detector_tests.rs  immutable_account_mutated_detector_test.rs  instruction_attribute_invalid_test.rs  instruction_attribute_unused_test.rs  manual_lamports_zeroing_test.rs  missing_check_comment_test.rs  missing_initspace_detector_test.rs  missing_signer_detector_test.rs  syn_detector_tests.rs  sysvar_account_detector_test.rs  unsafe_math_detector_test.rs
language-server/tests/clippy_detectors/: unsafe_math_detector_test.rs
language-server/tests/syn_detectors/: immutable_account_mutated_detector_test.rs  missing_check_comment_test.rs  sysvar_account_detector_test.rs  unsafe_math_detector_test.rs
(+90 files in other folders)
