[package]
name = "dylint_test"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "334fb906aef13d20050987b13448f37391bb97a2" }
dylint_linting = "4.1.0"
serde_json = "1.0"
dylint = "4.1.2"
anyhow = "1.0"
os_pipe = "1.2"

[dev-dependencies]
dylint_testing = "4.1.0"

[package.metadata.rust-analyzer]
rustc_private = true
