[package]
name = "language-server"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
log = "0.4"
env_logger = "0.11.8"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
tempfile = "3.8"
clippy_utils = "0.1.90"

[dev-dependencies]
tokio-test = "0.4"
