[package]
name = "language-server"
version = "0.1.1"
edition = "2024"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0.101", features = [
    "full",
    "extra-traits",
    "visit",
    "parsing",
] }
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }

[dev-dependencies]
tokio-test = "0.4"
